[package]
name = "dlzht-socks5"
version = "0.1.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/dlzht-socks5"
repository = "https://github.com/dlzht/dlzht-socks5"
license = "Apache-2.0"
authors = [
  "dlzht <dlzht@protonmail.com>"
]
description = "library for SOCKS5, RFC 1928"
keywords = ["socks5"]
categories = ["network-programming"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
strip = true
lto = true